<resources>
    <string name="app_name">AyoHealthy</string>
    <string name="splashscreen_content_description">SplashScreen Logo</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="forgot_password_button_text">Lupa kata sandi?</string>
    <string name="logo_content_description">AyoHealthy Logo</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="ayo_daftar">Ayo Daftar!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="server_client_id">_jYA5OVDmmrbllhI8CtbU01c</string>
    <string name="masuk">Masuk</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="main_login_background_content_desc">main login background</string>
    <string name="daftar">Daftar</string>
    <string name="nama_akun_email_hint">Nama Akun / Email</string>
    <string name="register_title">Buat Akun</string>
    <string name="agreement_notification_for_register">Dengan menekan tombol /bDaftar diatas, kamu menyetujui</string>
    <string name="pencarian">Pencarian</string>
    <string name="tv_pulihkan_sandi">Pulihkan sandi</string>
    <string name="forgot_description_text">Kami siap membantu kamu untuk mengembalikan kata sandi dari akun kesayangan kamu. Masukkan alamat email yang kamu gunakan dengan benar ya!</string>
    <string name="forgot_warning_text">Alamat email tidak ditemukan / tidak terdaftar</string>
    <string name="pulihkan_sandi">Pulihkan Sandi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_pengguna">Nama pengguna</string>
    <string name="pulihkan_sandi_text">Konfirmasi pulihkan sandi telah berhasil kami kirimkan ke alamat email kamu. Mohon ikuti instuksi yang ada pada email.</string>
    <string name="pesanan">Pesanan</string>
    <string name="menu_example">Salad Buah Enak</string>
    <string name="merchant_name">nama merchant</string>
    <string name="rekomendasi_untuk_kamu">Rekomendasi untuk kamu</string>
    <string name="pilihan_menu_rekomendasi">Pilihan menu rekomendasi</string>


</resources>