<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.auth.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/top_bar_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/forgot_back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:tint="@color/black" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_forgot_pass">

        <TextView
            android:id="@+id/tv_forgot_title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/tv_pulihkan_sandi"
            android:textColor="@color/black"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/forgot_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:justificationMode="inter_word"
            android:text="@string/forgot_description_text"
            />
        
        <TextView
            android:id="@+id/forgot_warning_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            android:textColor="#C50000"
            android:text="@string/forgot_warning_text"
            />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/text_edit_background"
            android:fontFamily="@font/quicksand"
            android:hint="Email kamu"
            android:padding="8dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/yellow_button"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/pulihkan_sandi"
            android:textColor="@color/primary_green"
            android:textSize="18sp"
            android:textStyle="bold" />
        
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>